1 file modified, 3 added

--- a/src/app/components/cars/cars.component.html
+++ b/src/app/components/cars/cars.component.html
@@ -1,3 +1,70 @@
-<p>
-cars works!
-</p>
+<!-- component -->
+<!-- item card -->
+<div class="m-10">
+  <div class="flex shadow-lg mx-auto my-32 mb-0 max-w-2xl h-64">
+     <div class="h-full w-2/3 rounded-lg rounded-r-none pb-5/6 bg-yellow-100">
+     <div class="m-4"><p class="font-bold flex whitespace-pre font-thin text-xl">Economy<span class="pl-3 ">4-5 Doars</span></p></div>
+     <div class="m-4 flex">
+       <div class="">
+            <div class="flex justify-center p-2 w-50 ">
+      <a href="#" class="flex items-center p-4 bg-blue-200 rounded-lg shadow-xs cursor-pointer hover:bg-blue-500 hover:text-gray-100">
+          
+          <svg class="h-6 fill-current hover:text-gray-100 " viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>PHP icon</title><path d="M7.01 10.207h-.944l-.515 2.648h.838c.556 0 .97-.105 1.242-.314.272-.21.455-.559.55-1.049.092-.47.05-.802-.124-.995-.175-.193-.523-.29-1.047-.29zM12 5.688C5.373 5.688 0 8.514 0 12s5.373 6.313 12 6.313S24 15.486 24 12c0-3.486-5.373-6.312-12-6.312zm-3.26 7.451c-.261.25-.575.438-.917.551-.336.108-.765.164-1.285.164H5.357l-.327 1.681H3.652l1.23-6.326h2.65c.797 0 1.378.209 1.744.628.366.418.476 1.002.33 1.752a2.836 2.836 0 0 1-.305.847c-.143.255-.33.49-.561.703zm4.024.715l.543-2.799c.063-.318.039-.536-.068-.651-.107-.116-.336-.174-.687-.174H11.46l-.704 3.625H9.388l1.23-6.327h1.367l-.327 1.682h1.218c.767 0 1.295.134 1.586.401s.378.7.263 1.299l-.572 2.944h-1.389zm7.597-2.265a2.782 2.782 0 0 1-.305.847c-.143.255-.33.49-.561.703a2.44 2.44 0 0 1-.917.551c-.336.108-.765.164-1.286.164h-1.18l-.327 1.682h-1.378l1.23-6.326h2.649c.797 0 1.378.209 1.744.628.366.417.477 1.001.331 1.751zM17.766 10.207h-.943l-.516 2.648h.838c.557 0 .971-.105 1.242-.314.272-.21.455-.559.551-1.049.092-.47.049-.802-.125-.995s-.524-.29-1.047-.29z"/></svg>
+          <div>
+            <p class=" text-xs font-medium ml-2 ">
+              PHP
+            </p>
+            
+          </div>
+      </a>
+  </div>
+          </div>
+          <div>
+            <div class="flex justify-center p-2 w-50 ">
+      <a href="#" class="flex items-center p-4 bg-blue-200 rounded-lg shadow-xs cursor-pointer hover:bg-blue-500 hover:text-gray-100">
+          
+          <svg class="h-6 fill-current hover:text-gray-100 " viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>PHP icon</title><path d="M7.01 10.207h-.944l-.515 2.648h.838c.556 0 .97-.105 1.242-.314.272-.21.455-.559.55-1.049.092-.47.05-.802-.124-.995-.175-.193-.523-.29-1.047-.29zM12 5.688C5.373 5.688 0 8.514 0 12s5.373 6.313 12 6.313S24 15.486 24 12c0-3.486-5.373-6.312-12-6.312zm-3.26 7.451c-.261.25-.575.438-.917.551-.336.108-.765.164-1.285.164H5.357l-.327 1.681H3.652l1.23-6.326h2.65c.797 0 1.378.209 1.744.628.366.418.476 1.002.33 1.752a2.836 2.836 0 0 1-.305.847c-.143.255-.33.49-.561.703zm4.024.715l.543-2.799c.063-.318.039-.536-.068-.651-.107-.116-.336-.174-.687-.174H11.46l-.704 3.625H9.388l1.23-6.327h1.367l-.327 1.682h1.218c.767 0 1.295.134 1.586.401s.378.7.263 1.299l-.572 2.944h-1.389zm7.597-2.265a2.782 2.782 0 0 1-.305.847c-.143.255-.33.49-.561.703a2.44 2.44 0 0 1-.917.551c-.336.108-.765.164-1.286.164h-1.18l-.327 1.682h-1.378l1.23-6.326h2.649c.797 0 1.378.209 1.744.628.366.417.477 1.001.331 1.751zM17.766 10.207h-.943l-.516 2.648h.838c.557 0 .971-.105 1.242-.314.272-.21.455-.559.551-1.049.092-.47.049-.802-.125-.995s-.524-.29-1.047-.29z"/></svg>
+          <div>
+            <p class=" text-xs font-medium ml-2 ">
+              PHP
+            </p>
+            
+          </div>
+      </a>
+  </div>
+          </div>
+     </div>
+     <div class="ml-7 flex">
+       <div class="mr-7"><img class="w-7" src="https://img.icons8.com/ios-filled/100/000000/air-conditioner.png"/></div>
+       <div><img class="w-7" src="https://img.icons8.com/ios-filled/100/000000/air-conditioner.png"/></div>
+       <div class="ml-7">
+         <p>Aircon</p>
+         <p>Manual</p>
+       </div>
+     </div>
+     </div>
+     <img class="h-full object-contain  rounded-r-none max-w-xs bg-white" src="http://logos.skyscnr.com/images/carhire/sippmaps/citroen_berlingo.jpg" alt="bag">
+     <div class="hidden w-2/3 px-4 py-4 bg-blue-400 rounded-lg lg:block">
+        <div class="flex justify-center">
+           <div class="flex justify-center p-2 w-50 ">
+      <a href="#" class="flex items-center p-4 bg-blue-200 rounded-lg shadow-xs cursor-pointer hover:bg-blue-500 hover:text-gray-100">
+          
+          <svg class="h-6 fill-current hover:text-gray-100 " viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>PHP icon</title><path d="M7.01 10.207h-.944l-.515 2.648h.838c.556 0 .97-.105 1.242-.314.272-.21.455-.559.55-1.049.092-.47.05-.802-.124-.995-.175-.193-.523-.29-1.047-.29zM12 5.688C5.373 5.688 0 8.514 0 12s5.373 6.313 12 6.313S24 15.486 24 12c0-3.486-5.373-6.312-12-6.312zm-3.26 7.451c-.261.25-.575.438-.917.551-.336.108-.765.164-1.285.164H5.357l-.327 1.681H3.652l1.23-6.326h2.65c.797 0 1.378.209 1.744.628.366.418.476 1.002.33 1.752a2.836 2.836 0 0 1-.305.847c-.143.255-.33.49-.561.703zm4.024.715l.543-2.799c.063-.318.039-.536-.068-.651-.107-.116-.336-.174-.687-.174H11.46l-.704 3.625H9.388l1.23-6.327h1.367l-.327 1.682h1.218c.767 0 1.295.134 1.586.401s.378.7.263 1.299l-.572 2.944h-1.389zm7.597-2.265a2.782 2.782 0 0 1-.305.847c-.143.255-.33.49-.561.703a2.44 2.44 0 0 1-.917.551c-.336.108-.765.164-1.286.164h-1.18l-.327 1.682h-1.378l1.23-6.326h2.649c.797 0 1.378.209 1.744.628.366.417.477 1.001.331 1.751zM17.766 10.207h-.943l-.516 2.648h.838c.557 0 .971-.105 1.242-.314.272-.21.455-.559.551-1.049.092-.47.049-.802-.125-.995s-.524-.29-1.047-.29z"/></svg>
+          <div>
+            <p class=" text-xs font-medium ml-2 ">
+              PHP
+            </p>
+            
+          </div>
+      </a>
+  </div>
+        </div>
+        <div class="flex items-center justify-end mt-4 top-auto lg:hidden">
+           <button class="bg-white text-red-500 px-4 py-2 rounded mr-auto hover:underline">Delete</button>
+           <button class=" bg-gray-200 text-blue-600 px-2 py-2 rounded-md mr-2">Edit</button>
+           <button class=" bg-blue-600 text-gray-200 px-2 py-2 rounded-md ">Publish</button>
+        </div>
+     </div>
+  </div>
+  <div class="bg-blue-600 text-gray-200 w-auto m-8 mt-0 flex justify-end lg:hidden"><button class=" bg-gray-600 text-gray-200 px-2 py-2 rounded-md mr-9">Publish</button></div>
+  </div>
